<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity">



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        app:cardCornerRadius="26dp"
        app:cardElevation="50dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:color="@color/light_pink"
            android:topLeftRadius="30dp"
            android:topRightRadius="30dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/light_pink"
                android:orientation="vertical">
<com.google.android.material.card.MaterialCardView
    android:layout_width="160dp"
    android:layout_height="160dp"
    android:layout_marginTop="80dp"
    android:layout_gravity="center"
    app:cardCornerRadius="80dp"
    android:background="@drawable/cctv"
    >

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/productimg"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@drawable/rounded_corner"
        android:src="@drawable/rounded_corner"
        />
</com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/panel"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:layout_gravity="clip_vertical"
                android:layout_marginTop="20dp"
                android:background="@color/light_pink"
                android:backgroundTint="@color/light_pink"
                android:foregroundTint="@color/black"
                android:foregroundTintMode="add"
                android:orientation="horizontal"
                android:weightSum="16">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="42dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="0dp"
                    android:backgroundTint="@color/black"

                    android:contentDescription="@string/backbtn"
                    android:foregroundTint="@color/black"
                    app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24"
                    app:tint="@color/black" />

                <TextView
                    android:id="@+id/txtDetails"
                    android:layout_width="169dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="11"
                    android:contentDescription="@string/details"
                    android:gravity="center"
                    android:text="@string/details"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/bell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginStart="0dp"

                    android:contentDescription="@string/bellicon"
                    android:foregroundTint="@color/black"
                    android:src="@drawable/ic_baseline_notifications_none_24"
                    android:tint="@color/black" />

                <ImageView
                    android:id="@+id/share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginStart="0dp"

                    android:contentDescription="@string/sharebtn"
                    android:foregroundTint="@color/black"
                    android:src="@drawable/ic_baseline_share_24"
                    android:tint="@color/black" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="270dp"
            android:color="@color/light_pink"
            android:topLeftRadius="30dp"
            android:topRightRadius="30dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/rl_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp">

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$299"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="10dp"
                        android:layout_toRightOf="@+id/price"
                        android:text="$350"
                        android:textAlignment="center"
                        android:textColor="@color/fav"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sold_item"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_toRightOf="@+id/sold"
                        android:text="> 500 sold"
                        android:textAlignment="center"
                        android:textColor="@color/cardview_dark_background"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <ImageButton
                        android:id="@+id/imagebtn"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/fav_btn"
                        android:backgroundTint="@color/fav"
                        android:src="@drawable/ic_baseline_favorite_24"
                        android:tint="@color/white" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rl_one"
                    android:layout_marginLeft="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Night Vision HD"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_three"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rl_two"
                    android:layout_marginLeft="10dp">

                    <RatingBar
                        android:id="@+id/rating_bar"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/background_light"
                        android:backgroundTint="@color/white"
                        android:foregroundTint="@android:color/holo_orange_light"
                        android:indeterminateTint="@android:color/holo_orange_light"
                        android:progressBackgroundTint="@color/startcolor"
                        android:progressTint="@android:color/holo_orange_dark"
                        android:rating="3"
                        android:secondaryProgressTint="@android:color/holo_orange_light"
                        android:stepSize="0.5" />

                    <TextView
                        android:id="@+id/rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="8dp"
                        android:layout_toRightOf="@+id/rating_bar"
                        android:text="3.0"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/rates"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="8dp"
                        android:layout_toRightOf="@+id/rate"
                        android:text="(48)" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rl_three"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="0dp"
                        android:backgroundTint="@color/teal_200"
                        android:text="Cashback 10%"
                        android:textStyle="bold"
                        app:strokeColor="@android:color/holo_blue_light" />
                </RelativeLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="191dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="460dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="60dp"
            android:topLeftRadius="30dp"
            android:topRightRadius="30dp"
            app:cardBackgroundColor="@color/material_on_primary_emphasis_medium">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/rl_row_botm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp">

                    <TextView
                        android:id="@+id/product_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Product Information :"
                        android:textColor="@color/cardview_dark_background"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:backgroundTint="@android:color/holo_orange_dark"
                        android:text="New" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_row_botm1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rl_row_botm"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp">

                    <TextView
                        android:id="@+id/alert_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Alert Type"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/audio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/audio_motion"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_row_botm2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rl_row_botm1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp">

                    <TextView
                        android:id="@+id/Technology"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Technology"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/wifi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="Wi-Fi"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_row_botm3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rl_row_botm2"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp">

                    <TextView
                        android:id="@+id/brand"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Brand"

                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/zumimall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="ZUMIMALL"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_row_botm4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rl_row_botm3"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp">

                    <TextView
                        android:id="@+id/resoulusion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Resoulution"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="1080P"
                        android:textStyle="bold" />
                </RelativeLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>


    </androidx.cardview.widget.CardView>

</LinearLayout>